--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Something</title>
+    <title>Todo리스트_박차오름</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="index.css" />
 </head>
